  [Daniele Viganò]
  * Supervisord init scripts are now provided for the dbserver, celery
    and the webui. Celery is not started by default, other two are.

  [Michele Simionato]
  * Another export fix: made sure it is run by the current user
  * Fixed the export: if the export directory does not exists, it is created
  * Introduced the configuration variable `multi_user`, false for source
    installations and true for package installations
  * Fixed the WebUI export
  * Removed the .txt outputs from the WebUI page engine/<output_id>/outputs
    (they are useful only internally)
  * Fixed the export: first the xml exporter is tried and then the csv exporter;
    if both are available, only the first is used, not both of them

  [Daniele Viganò]
  * Add support for Ubuntu 16.04 (xenial) packages
  * Removed the openquake_worker.cfg file because it is not used anymore

  [Michele Simionato]
  * Replaced PostgreSQL with SQLite
  * Introduced a dbserver to mediate the interaction with the database
  * Restored the signal handler to manage properly `kill` signals so that
    the workers are revoked when a process is killed manually
  * Fixed in a more robust way the duplicated log bug
  * Made more robust the killing of processes by patching concurrent.futures
  * Fixed a critical bug with celery not being used even when `use_celery`
    was true.
  * Improved the validation of NRML files
  * Added a command `oq-engine --show-log <job_id>`

  [Daniele Viganò]
  * Use the 'postgresql' meta package as dependency of the .deb
    package to support newer versions of Postgres; this makes
    Trusty package installable on Ubuntu 16.04 and Debian 8

  [Daniele Viganò, Michele Simionato]
  * Fixed a bug in `oq-engine --export-outputs`

  [Daniele Viganò, Matteo Nastasi]
  * Allow installation of the binary package on Ubuntu derivatives

  [Michele Simionato]
  * Removed openquake/engine/settings.py
  * Made the dependency on celery required only in cluster installations