@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Removed the check on the export_dir when using the WebUI
+
   [Daniele Viganò]
   * Supervisord init scripts are now provided for the dbserver, celery
     and the webui. Celery is not started by default, other two are.
